# LeanDBNet

./: LICENSE.txt  README.md  pyproject.toml  train.py
src/dbnet/: __about__.py  __init__.py
src/dbnet/configs/: __init__.py  config.py
src/dbnet/datasets/: __init__.py  collate_fn.py  icdar.py
src/dbnet/datasets/transforms/: __init__.py
src/dbnet/metrics/icdar2015/: __init__.py  eval.py  quad_metric.py
src/dbnet/modeling/: __init__.py  dbnet.py
src/dbnet/modeling/backbones/: __init__.py  resnet.py
src/dbnet/modeling/decoders/: __init__.py  dbnet.py  dbnet_plus.py
src/dbnet/modeling/losses/: __init__.py  balance_cross_entropy_loss.py  dbnet.py  dice_loss.py  l1_loss.py
src/dbnet/utils/: early_stopper.py
tests/: conftest.py
tests/datasets/: test_horizontal_flip.py  test_random_crop.py  test_random_min_resize.py  test_random_rotate.py
tests/modeling/backbones/: test_resnet.py
tests/modeling/decoders/: test_dbnet.py
